--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: xenial
 cache:
   directories:
     - $HOME/.ccache
@@ -60,7 +60,7 @@ script:
   - rm src/python/turicreate/test/test_style_transfer.py src/python/turicreate/test/test_object_detector.py src/python/turicreate/test/test_one_shot_object_detector.py
 
   # Build the wheel
-  - bash scripts/make_wheel.sh --build_number=$CI_PIPELINE_ID --num_procs=1 --debug --skip_cpp_test --skip_doc
+  - travis_wait 180 bash scripts/make_wheel.sh --build_number=$CI_PIPELINE_ID --num_procs=1 --debug --skip_cpp_test --skip_doc
 
   # See the changes in ccache
   - ccache -s
