--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,6 +80,24 @@ build_wheel_linux_python36:
     paths:
       - target/
 
+build_wheel_linux_python37:
+  tags:
+    - docker
+  services:
+    - docker:dind
+  image: docker:stable
+  stage: build
+  variables:
+    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_DRIVER: overlay2
+  script:
+    - apk add bash
+    - bash scripts/make_wheel.sh --skip_test --skip_cpp_test --build_number=$CI_PIPELINE_ID --num_procs=4 --docker-python3.7 --skip_doc
+  artifacts:
+    expire_in: 1 day
+    paths:
+      - target/
+
 build_wheel_mac_10_14_python27:
   tags:
     - macos10.14
@@ -121,6 +139,22 @@ build_wheel_mac_10_14_python36:
   stage: build
   script:
     - export VIRTUALENV="/Library/Frameworks/Python.framework/Versions/3.6/bin/virtualenv"
+    - source scripts/use_ccache.sh
+    - bash scripts/make_wheel.sh --skip_test --skip_cpp_test --build_number=$CI_PIPELINE_ID --num_procs=4
+  artifacts:
+    expire_in: 1 day
+    paths:
+      - target/
+
+build_wheel_mac_10_14_python37:
+  tags:
+    - macos10.14
+  only:
+    variables:
+      - $TC_HAS_MACOS_RUNNERS == "1"
+  stage: build
+  script:
+    - export VIRTUALENV="/Library/Frameworks/Python.framework/Versions/3.7/bin/virtualenv"
     - source scripts/use_ccache.sh
     - bash scripts/make_wheel.sh --skip_test --skip_cpp_test --build_number=$CI_PIPELINE_ID --num_procs=4
   artifacts:
@@ -283,6 +317,27 @@ test_python_linux_python36:
     paths:
       - pytest.*
 
+test_python_linux_python37:
+  tags:
+    - docker
+  services:
+    - docker:dind
+  image: docker:stable
+  stage: test
+  variables:
+    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_DRIVER: overlay2
+  dependencies:
+    - build_wheel_linux_python37
+  script:
+    - apk add bash
+    - bash scripts/test_wheel.sh --docker-python3.7
+  artifacts:
+    when: always
+    expire_in: 2 weeks
+    paths:
+      - pytest.*
+
 test_python_mac_python27_10_13:
   tags:
     - macos10.13
@@ -355,6 +410,24 @@ test_python_mac_python36_10_14:
     paths:
       - pytest.*
 
+test_python_mac_python37_10_14:
+  tags:
+    - macos10.14
+  only:
+    variables:
+      - $TC_HAS_MACOS_RUNNERS == "1"
+  stage: test
+  dependencies:
+    - build_wheel_mac_10_14_python37
+  script:
+    - export VIRTUALENV="/Library/Frameworks/Python.framework/Versions/3.7/bin/virtualenv"
+    - bash scripts/test_wheel.sh
+  artifacts:
+    when: always
+    expire_in: 2 weeks
+    paths:
+      - pytest.*
+
 scenario_tests_linux_python27:
   tags:
     - docker
@@ -406,6 +479,23 @@ scenario_tests_linux_python36:
     - cd scenario-tests
     - ./run_scenario_tests.sh --docker-python3.6 ../target/turicreate-*.whl
 
+scenario_tests_linux_python37:
+  tags:
+    - docker
+  services:
+    - docker:dind
+  image: docker:stable
+  stage: test
+  variables:
+    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_DRIVER: overlay2
+  dependencies:
+    - build_wheel_linux_python37
+  script:
+    - apk add bash
+    - cd scenario-tests
+    - ./run_scenario_tests.sh --docker-python3.7 ../target/turicreate-*.whl
+
 scenario_tests_mac_python27_10_13:
   tags:
     - macos10.13
@@ -447,9 +537,11 @@ collect_artifacts:
     - build_wheel_linux_python27
     - build_wheel_linux_python35
     - build_wheel_linux_python36
+    - build_wheel_linux_python37
     - build_wheel_mac_10_14_python27
     - build_wheel_mac_10_14_python35
     - build_wheel_mac_10_14_python36
+    - build_wheel_mac_10_14_python37
   script:
     - mv release/src/deployment/*.dylib target/
     - rmdir -p release || find release
