--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,24 +80,6 @@ build_wheel_linux_python36:
     paths:
       - target/
 
-build_wheel_linux_python37:
-  tags:
-    - docker
-  services:
-    - docker:dind
-  image: docker:stable
-  stage: build
-  variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_DRIVER: overlay2
-  script:
-    - apk add bash
-    - bash scripts/make_wheel.sh --skip_test --skip_cpp_test --build_number=$CI_PIPELINE_ID --num_procs=4 --docker-python3.7 --skip_doc
-  artifacts:
-    expire_in: 1 day
-    paths:
-      - target/
-
 build_wheel_mac_10_14_python27:
   tags:
     - macos10.14
@@ -317,27 +299,6 @@ test_python_linux_python36:
     paths:
       - pytest.*
 
-test_python_linux_python37:
-  tags:
-    - docker
-  services:
-    - docker:dind
-  image: docker:stable
-  stage: test
-  variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_DRIVER: overlay2
-  dependencies:
-    - build_wheel_linux_python37
-  script:
-    - apk add bash
-    - bash scripts/test_wheel.sh --docker-python3.7
-  artifacts:
-    when: always
-    expire_in: 2 weeks
-    paths:
-      - pytest.*
-
 test_python_mac_python27_10_13:
   tags:
     - macos10.13
@@ -479,36 +440,21 @@ scenario_tests_linux_python36:
     - cd scenario-tests
     - ./run_scenario_tests.sh --docker-python3.6 ../target/turicreate-*.whl
 
-scenario_tests_linux_python37:
-  tags:
-    - docker
-  services:
-    - docker:dind
-  image: docker:stable
-  stage: test
-  variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_DRIVER: overlay2
-  dependencies:
-    - build_wheel_linux_python37
-  script:
-    - apk add bash
-    - cd scenario-tests
-    - ./run_scenario_tests.sh --docker-python3.7 ../target/turicreate-*.whl
-
-scenario_tests_mac_python27_10_13:
-  tags:
-    - macos10.13
-  only:
-    variables:
-      - $TC_HAS_MACOS_RUNNERS == "1"
-  stage: test
-  dependencies:
-    - build_wheel_mac_10_14_python27
-  script:
-    - export VIRTUALENV="/Library/Frameworks/Python.framework/Versions/2.7/bin/virtualenv"
-    - cd scenario-tests
-    - ./run_scenario_tests.sh ../target/turicreate-*.whl
+# This coremltools issues needs to be resolved before we can
+# https://github.com/apple/coremltools/issues/408
+#scenario_tests_mac_python27_10_13:
+#  tags:
+#    - macos10.13
+#  only:
+#    variables:
+#      - $TC_HAS_MACOS_RUNNERS == "1"
+#  stage: test
+#  dependencies:
+#    - build_wheel_mac_10_14_python27
+#  script:
+#    - export VIRTUALENV="/Library/Frameworks/Python.framework/Versions/2.7/bin/virtualenv"
+#    - cd scenario-tests
+#    - ./run_scenario_tests.sh ../target/turicreate-*.whl
 
 scenario_tests_mac_python27_10_14:
   tags:
@@ -537,7 +483,6 @@ collect_artifacts:
     - build_wheel_linux_python27
     - build_wheel_linux_python35
     - build_wheel_linux_python36
-    - build_wheel_linux_python37
     - build_wheel_mac_10_14_python27
     - build_wheel_mac_10_14_python35
     - build_wheel_mac_10_14_python36
