--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: trusty
 cache:
   directories:
     - $HOME/.ccache
@@ -9,7 +9,6 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
-  - "3.7"
 
 addons:
   apt:
