--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -16,6 +16,7 @@ scikit-learn==0.20.3
 six==1.12.0
 statsmodels==0.9.0
 wheel==0.29.0
+mxnet==1.1.0; sys_platform != 'darwin'
 UISoup==2.5.7
 pyobjc==5.2; sys_platform == 'darwin'
 future==0.17.1
