Add npm to the correct docker container

--- a/scripts/Dockerfile-CentOS-6
+++ b/scripts/Dockerfile-CentOS-6
@@ -28,6 +28,7 @@ RUN yum -y update && \
                glibc-devel \
                ccache \
                tk-devel \
+               npm \
                patch \
                rsync \
                git \
