--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -4,14 +4,18 @@
 
 coremltools==3.3; python_version < '3.8'
 coremltools==4.0b1; python_version == '3.8' # Only version to support Python 3.8
-scipy==1.5.1
+
+scipy==1.2.1; python_version < '3.8'
+scipy==1.5.1; python_version == '3.8'
+
 resampy==0.2.1
 scikit-learn==0.23.1
 statsmodels==0.11.1
 tensorflow==2.0.0; python_version < '3.5'   # Last version to support Python 2.7
 tensorflow==2.2.0; python_version >= '3.5'
 UISoup==2.5.7
-llvmlite==0.31.0
+llvmlite==0.33.0; python_version == '3.8'
+llvmlite==0.31.0; python_version != '3.8'
 
 ########## >=  #########
 
