--- a/scripts/requirements-minimal.txt
+++ b/scripts/requirements-minimal.txt
@@ -1,4 +1,6 @@
-numpy==1.16.4
+numpy==1.16.4; python_version < '3.6'
+numpy==1.19.1; python_version >= '3.6'
+
 cython==0.29.21
 decorator==4.4.0
 pandas==0.24.2; python_version < '3.6'
